feat: roverd and roverctl information
