# src/openapi/model__pipeline_get_200_response_pipeline_validation_errors.go
@@ -1,0 +1,198 @@
+/*
+roverd REST API
+
+API exposed from each rover to allow process, service, source and file management
+
+API version: 1.0.0
+*/
+
+// Code generated by OpenAPI Generator (https://openapi-generator.tech); DO NOT EDIT.
+
+package openapi
+
+import (
+	"encoding/json"
+)
+
+// checks if the PipelineGet200ResponsePipelineValidationErrors type satisfies the MappedNullable interface at compile time
+var _ MappedNullable = &PipelineGet200ResponsePipelineValidationErrors{}
+
+// PipelineGet200ResponsePipelineValidationErrors If status is invalid, this array shows the validation errors
+type PipelineGet200ResponsePipelineValidationErrors struct {
+	UnmetStreams []UnmetStreamError `json:"unmet_streams,omitempty"`
+	UnmetServices []UnmetServiceError `json:"unmet_services,omitempty"`
+	DuplicateService []string `json:"duplicate_service,omitempty"`
+}
+
+// NewPipelineGet200ResponsePipelineValidationErrors instantiates a new PipelineGet200ResponsePipelineValidationErrors object
+// This constructor will assign default values to properties that have it defined,
+// and makes sure properties required by API are set, but the set of arguments
+// will change when the set of required properties is changed
+func NewPipelineGet200ResponsePipelineValidationErrors() *PipelineGet200ResponsePipelineValidationErrors {
+	this := PipelineGet200ResponsePipelineValidationErrors{}
+	return &this
+}
+
+// NewPipelineGet200ResponsePipelineValidationErrorsWithDefaults instantiates a new PipelineGet200ResponsePipelineValidationErrors object
+// This constructor will only assign default values to properties that have it defined,
+// but it doesn't guarantee that properties required by API are set
+func NewPipelineGet200ResponsePipelineValidationErrorsWithDefaults() *PipelineGet200ResponsePipelineValidationErrors {
+	this := PipelineGet200ResponsePipelineValidationErrors{}
+	return &this
+}
+
+// GetUnmetStreams returns the UnmetStreams field value if set, zero value otherwise.
+func (o *PipelineGet200ResponsePipelineValidationErrors) GetUnmetStreams() []UnmetStreamError {
+	if o == nil || IsNil(o.UnmetStreams) {
+		var ret []UnmetStreamError
+		return ret
+	}
+	return o.UnmetStreams
+}
+
+// GetUnmetStreamsOk returns a tuple with the UnmetStreams field value if set, nil otherwise
+// and a boolean to check if the value has been set.
+func (o *PipelineGet200ResponsePipelineValidationErrors) GetUnmetStreamsOk() ([]UnmetStreamError, bool) {
+	if o == nil || IsNil(o.UnmetStreams) {
+		return nil, false
+	}
+	return o.UnmetStreams, true
+}
+
+// HasUnmetStreams returns a boolean if a field has been set.
+func (o *PipelineGet200ResponsePipelineValidationErrors) HasUnmetStreams() bool {
+	if o != nil && !IsNil(o.UnmetStreams) {
+		return true
+	}
+
+	return false
+}
+
+// SetUnmetStreams gets a reference to the given []UnmetStreamError and assigns it to the UnmetStreams field.
+func (o *PipelineGet200ResponsePipelineValidationErrors) SetUnmetStreams(v []UnmetStreamError) {
+	o.UnmetStreams = v
+}
+
+// GetUnmetServices returns the UnmetServices field value if set, zero value otherwise.
+func (o *PipelineGet200ResponsePipelineValidationErrors) GetUnmetServices() []UnmetServiceError {
+	if o == nil || IsNil(o.UnmetServices) {
+		var ret []UnmetServiceError
+		return ret
+	}
+	return o.UnmetServices
+}
+
+// GetUnmetServicesOk returns a tuple with the UnmetServices field value if set, nil otherwise
+// and a boolean to check if the value has been set.
+func (o *PipelineGet200ResponsePipelineValidationErrors) GetUnmetServicesOk() ([]UnmetServiceError, bool) {
+	if o == nil || IsNil(o.UnmetServices) {
+		return nil, false
+	}
+	return o.UnmetServices, true
+}
+
+// HasUnmetServices returns a boolean if a field has been set.
+func (o *PipelineGet200ResponsePipelineValidationErrors) HasUnmetServices() bool {
+	if o != nil && !IsNil(o.UnmetServices) {
+		return true
+	}
+
+	return false
+}
+
+// SetUnmetServices gets a reference to the given []UnmetServiceError and assigns it to the UnmetServices field.
+func (o *PipelineGet200ResponsePipelineValidationErrors) SetUnmetServices(v []UnmetServiceError) {
+	o.UnmetServices = v
+}
+
+// GetDuplicateService returns the DuplicateService field value if set, zero value otherwise.
+func (o *PipelineGet200ResponsePipelineValidationErrors) GetDuplicateService() []string {
+	if o == nil || IsNil(o.DuplicateService) {
+		var ret []string
+		return ret
+	}
+	return o.DuplicateService
+}
+
+// GetDuplicateServiceOk returns a tuple with the DuplicateService field value if set, nil otherwise
+// and a boolean to check if the value has been set.
+func (o *PipelineGet200ResponsePipelineValidationErrors) GetDuplicateServiceOk() ([]string, bool) {
+	if o == nil || IsNil(o.DuplicateService) {
+		return nil, false
+	}
+	return o.DuplicateService, true
+}
+
+// HasDuplicateService returns a boolean if a field has been set.
+func (o *PipelineGet200ResponsePipelineValidationErrors) HasDuplicateService() bool {
+	if o != nil && !IsNil(o.DuplicateService) {
+		return true
+	}
+
+	return false
+}
+
+// SetDuplicateService gets a reference to the given []string and assigns it to the DuplicateService field.
+func (o *PipelineGet200ResponsePipelineValidationErrors) SetDuplicateService(v []string) {
+	o.DuplicateService = v
+}
+
+func (o PipelineGet200ResponsePipelineValidationErrors) MarshalJSON() ([]byte, error) {
+	toSerialize,err := o.ToMap()
+	if err != nil {
+		return []byte{}, err
+	}
+	return json.Marshal(toSerialize)
+}
+
+func (o PipelineGet200ResponsePipelineValidationErrors) ToMap() (map[string]interface{}, error) {
+	toSerialize := map[string]interface{}{}
+	if !IsNil(o.UnmetStreams) {
+		toSerialize["unmet_streams"] = o.UnmetStreams
+	}
+	if !IsNil(o.UnmetServices) {
+		toSerialize["unmet_services"] = o.UnmetServices
+	}
+	if !IsNil(o.DuplicateService) {
+		toSerialize["duplicate_service"] = o.DuplicateService
+	}
+	return toSerialize, nil
+}
+
+type NullablePipelineGet200ResponsePipelineValidationErrors struct {
+	value *PipelineGet200ResponsePipelineValidationErrors
+	isSet bool
+}
+
+func (v NullablePipelineGet200ResponsePipelineValidationErrors) Get() *PipelineGet200ResponsePipelineValidationErrors {
+	return v.value
+}
+
+func (v *NullablePipelineGet200ResponsePipelineValidationErrors) Set(val *PipelineGet200ResponsePipelineValidationErrors) {
+	v.value = val
+	v.isSet = true
+}
+
+func (v NullablePipelineGet200ResponsePipelineValidationErrors) IsSet() bool {
+	return v.isSet
+}
+
+func (v *NullablePipelineGet200ResponsePipelineValidationErrors) Unset() {
+	v.value = nil
+	v.isSet = false
+}
+
+func NewNullablePipelineGet200ResponsePipelineValidationErrors(val *PipelineGet200ResponsePipelineValidationErrors) *NullablePipelineGet200ResponsePipelineValidationErrors {
+	return &NullablePipelineGet200ResponsePipelineValidationErrors{value: val, isSet: true}
+}
+
+func (v NullablePipelineGet200ResponsePipelineValidationErrors) MarshalJSON() ([]byte, error) {
+	return json.Marshal(v.value)
+}
+
+func (v *NullablePipelineGet200ResponsePipelineValidationErrors) UnmarshalJSON(src []byte) error {
+	v.isSet = true
+	return json.Unmarshal(src, &v.value)
+}
+
+
