# src/openapi/model__services__name__get_200_response.go
@@ -12,6 +12,8 @@ package openapi
 
 import (
 	"encoding/json"
+	"bytes"
+	"fmt"
 )
 
 // checks if the ServicesNameGet200Response type satisfies the MappedNullable interface at compile time
@@ -20,19 +22,24 @@ var _ MappedNullable = &ServicesNameGet200Response{}
 // ServicesNameGet200Response struct for ServicesNameGet200Response
 type ServicesNameGet200Response struct {
 	// The name of the service
-	Name *string `json:"name,omitempty"`
-	Status *ServiceStatus `json:"status,omitempty"`
-	Versions []string `json:"versions,omitempty"`
+	Name string `json:"name"`
+	Status ServiceStatus `json:"status"`
+	Versions []string `json:"versions"`
 	// The version that is enabled for this service (if any)
 	EnabledVersion *string `json:"enabled_version,omitempty"`
 }
+
+type _ServicesNameGet200Response ServicesNameGet200Response
 
 // NewServicesNameGet200Response instantiates a new ServicesNameGet200Response object
 // This constructor will assign default values to properties that have it defined,
 // and makes sure properties required by API are set, but the set of arguments
 // will change when the set of required properties is changed
-func NewServicesNameGet200Response() *ServicesNameGet200Response {
+func NewServicesNameGet200Response(name string, status ServiceStatus, versions []string) *ServicesNameGet200Response {
 	this := ServicesNameGet200Response{}
+	this.Name = name
+	this.Status = status
+	this.Versions = versions
 	return &this
 }
 
@@ -44,98 +51,74 @@ func NewServicesNameGet200ResponseWithDefaults() *ServicesNameGet200Response {
 	return &this
 }
 
-// GetName returns the Name field value if set, zero value otherwise.
+// GetName returns the Name field value
 func (o *ServicesNameGet200Response) GetName() string {
-	if o == nil || IsNil(o.Name) {
+	if o == nil {
 		var ret string
 		return ret
 	}
-	return *o.Name
+
+	return o.Name
 }
 
-// GetNameOk returns a tuple with the Name field value if set, nil otherwise
+// GetNameOk returns a tuple with the Name field value
 // and a boolean to check if the value has been set.
 func (o *ServicesNameGet200Response) GetNameOk() (*string, bool) {
-	if o == nil || IsNil(o.Name) {
+	if o == nil {
 		return nil, false
 	}
-	return o.Name, true
+	return &o.Name, true
 }
 
-// HasName returns a boolean if a field has been set.
-func (o *ServicesNameGet200Response) HasName() bool {
-	if o != nil && !IsNil(o.Name) {
-		return true
-	}
-
-	return false
-}
-
-// SetName gets a reference to the given string and assigns it to the Name field.
+// SetName sets field value
 func (o *ServicesNameGet200Response) SetName(v string) {
-	o.Name = &v
+	o.Name = v
 }
 
-// GetStatus returns the Status field value if set, zero value otherwise.
+// GetStatus returns the Status field value
 func (o *ServicesNameGet200Response) GetStatus() ServiceStatus {
-	if o == nil || IsNil(o.Status) {
+	if o == nil {
 		var ret ServiceStatus
 		return ret
 	}
-	return *o.Status
+
+	return o.Status
 }
 
-// GetStatusOk returns a tuple with the Status field value if set, nil otherwise
+// GetStatusOk returns a tuple with the Status field value
 // and a boolean to check if the value has been set.
 func (o *ServicesNameGet200Response) GetStatusOk() (*ServiceStatus, bool) {
-	if o == nil || IsNil(o.Status) {
+	if o == nil {
 		return nil, false
 	}
-	return o.Status, true
+	return &o.Status, true
 }
 
-// HasStatus returns a boolean if a field has been set.
-func (o *ServicesNameGet200Response) HasStatus() bool {
-	if o != nil && !IsNil(o.Status) {
-		return true
-	}
-
-	return false
-}
-
-// SetStatus gets a reference to the given ServiceStatus and assigns it to the Status field.
+// SetStatus sets field value
 func (o *ServicesNameGet200Response) SetStatus(v ServiceStatus) {
-	o.Status = &v
+	o.Status = v
 }
 
-// GetVersions returns the Versions field value if set, zero value otherwise.
+// GetVersions returns the Versions field value
 func (o *ServicesNameGet200Response) GetVersions() []string {
-	if o == nil || IsNil(o.Versions) {
+	if o == nil {
 		var ret []string
 		return ret
 	}
+
 	return o.Versions
 }
 
-// GetVersionsOk returns a tuple with the Versions field value if set, nil otherwise
+// GetVersionsOk returns a tuple with the Versions field value
 // and a boolean to check if the value has been set.
 func (o *ServicesNameGet200Response) GetVersionsOk() ([]string, bool) {
-	if o == nil || IsNil(o.Versions) {
+	if o == nil {
 		return nil, false
 	}
 	return o.Versions, true
 }
 
-// HasVersions returns a boolean if a field has been set.
-func (o *ServicesNameGet200Response) HasVersions() bool {
-	if o != nil && !IsNil(o.Versions) {
-		return true
-	}
-
-	return false
-}
-
-// SetVersions gets a reference to the given []string and assigns it to the Versions field.
+// SetVersions sets field value
 func (o *ServicesNameGet200Response) SetVersions(v []string) {
 	o.Versions = v
 }
@@ -182,19 +165,52 @@ func (o ServicesNameGet200Response) MarshalJSON() ([]byte, error) {
 
 func (o ServicesNameGet200Response) ToMap() (map[string]interface{}, error) {
 	toSerialize := map[string]interface{}{}
-	if !IsNil(o.Name) {
-		toSerialize["name"] = o.Name
-	}
-	if !IsNil(o.Status) {
-		toSerialize["status"] = o.Status
-	}
-	if !IsNil(o.Versions) {
-		toSerialize["versions"] = o.Versions
-	}
+	toSerialize["name"] = o.Name
+	toSerialize["status"] = o.Status
+	toSerialize["versions"] = o.Versions
 	if !IsNil(o.EnabledVersion) {
 		toSerialize["enabled_version"] = o.EnabledVersion
 	}
 	return toSerialize, nil
+}
+
+func (o *ServicesNameGet200Response) UnmarshalJSON(data []byte) (err error) {
+	// This validates that all required properties are included in the JSON object
+	// by unmarshalling the object into a generic map with string keys and checking
+	// that every required field exists as a key in the generic map.
+	requiredProperties := []string{
+		"name",
+		"status",
+		"versions",
+	}
+
+	allProperties := make(map[string]interface{})
+
+	err = json.Unmarshal(data, &allProperties)
+
+	if err != nil {
+		return err;
+	}
+
+	for _, requiredProperty := range(requiredProperties) {
+		if _, exists := allProperties[requiredProperty]; !exists {
+			return fmt.Errorf("no value given for required property %v", requiredProperty)
+		}
+	}
+
+	varServicesNameGet200Response := _ServicesNameGet200Response{}
+
+	decoder := json.NewDecoder(bytes.NewReader(data))
+	decoder.DisallowUnknownFields()
+	err = decoder.Decode(&varServicesNameGet200Response)
+
+	if err != nil {
+		return err
+	}
+
+	*o = ServicesNameGet200Response(varServicesNameGet200Response)
+
+	return err
 }
 
 type NullableServicesNameGet200Response struct {
